--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,11 @@
   },
   "homepage": "https://github.com/dan-silver/azure-function-samples#readme",
   "devDependencies": {
-    "@microsoft/microsoft-graph-types": "^0.4.1"
+    "@microsoft/microsoft-graph-types": "^0.4.1",
+    "typescript": "^2.3.1"
   },
   "dependencies": {
     "node-fetch": "^1.6.3",
-    "typescript": "^2.2.1",
     "@microsoft/microsoft-graph-client": "^0.4.1"
   }
 }
